--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: java
+
 sudo: false
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+ 
+-dist: trusty
+-
+ addons:
+   apt:
+     packages:
+       - oracle-java8-installer
+ 
+ install:
+   - true
+ 
+ script:
+- true
