--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: java
-sudo: false
-dist: trusty
 
- addons:
-   apt:
-     packages:
-       - oracle-java8-installer
-install:
-   - true
-script:
-- true
+jdk:
+  - oraclejdk8
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
